--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <link rel="stylesheet" href="./src/output.css">
 
+    <link rel="stylesheet" href="./src/output.css">
     <title>Plebes</title>
   </head>
-  <body class="overflow-x-hidden font-body text-jacarta-500 dark:bg-jacarta-900"
-  >
+  <body class="overflow-x-hidden font-body text-jacarta-500 dark:bg-jacarta-900">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+
   </body>
 </html>
