--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./src/output.css">
-    <title>Plebes</title>
-  </head>
-  <body class="overflow-x-hidden font-body text-jacarta-500 dark:bg-jacarta-900">
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+<head>
+  <meta charset="UTF-8" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="./favicon.ico" />
+  <!-- Alternative favicon formats -->
+  <!-- <link rel="icon" type="image/svg+xml" href="/path/to/favicon.svg" /> -->
+  <!-- <link rel="icon" type="image/x-icon" href="/path/to/favicon.ico" /> -->
 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./src/output.css">
+  <title>Plebes</title>
+</head>
 
-  </body>
+<body class="overflow-x-hidden font-body text-jacarta-500 dark:bg-jacarta-900">
+  <div id="root"></div>
+
+  <script type="module" src="/src/main.jsx"></script>
+
+  <script>
+    // Ensure dark mode class is added on load
+    window.addEventListener("DOMContentLoaded", function () {
+      const htmlElm = document.documentElement; // Get the html element
+      htmlElm.classList.add("dark");
+    });
+  </script>
+</body>
+
 </html>
